manifests/prototype/netboot-xyz/http-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netboot-xyz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netboot-xyz
    app.kubernetes.io/name: netboot-xyz
  name: netboot-xyz
  namespace: netboot-xyz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netboot-xyz
  template:
    metadata:
      labels:
        app: netboot-xyz
    spec:
      containers:
        - image: lscr.io/linuxserver/netbootxyz:0.7.1
          imagePullPolicy: IfNotPresent
          name: netboot-xyz
          ports:
            - containerPort: 3000
              name: nb-xyz-web-int
              protocol: TCP
          volumeMounts:
            - name: netboot-xyz-config
              mountPath: /config
            - name: netboot-xyz-assets
              mountPath: /assets
      restartPolicy: Always
      volumes:
        - name: netboot-xyz-config
          hostPath:
            path: /k8s-hostpath/netboot-xyz-config
            type: Directory
        - name: netboot-xyz-assets
          hostPath:
            path: /k8s-hostpath/netboot-xyz-assets
            type: Directory
