manifests/prototype/netboot-xyz/http-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: netboot-xyz
#   name: netboot-xyz
#   namespace: netboot-xyz
# spec:
#   ports:
#     - name: netboot-xyz
#       port: 80
#       protocol: TCP
#       targetPort: 80
#     - name: netboot-xyz-tftp
#       port: 69
#       protocol: UDP
#       targetPort: 69
#     - name: netboot-xyz-web-interface
#       port: 3000
#       protocol: TCP
#       targetPort: 3000
#   selector:
#     app: netboot-xyz
#   externalTrafficPolicy: Local
#   loadBalancerIP: 192.168.80.102
#   type: LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: netboot-xyz
  namespace: netboot-xyz
spec:
  selector:
    app: netboot-xyz
  ports:
    - name: http
      targetPort: 3000
      port: 3000
