manifests/prototype/netboot-xyz/tftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netboot-xyz-tftp
  name: netboot-xyz-tftp
  namespace: netboot-xyz
spec:
  ports:
    - name: netboot-xyz-tftp
      port: 69
      protocol: UDP
      targetPort: 69
  selector:
    app: netboot-xyz-tftp
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.80.102
  type: LoadBalancer
